objects/Floor_Plan_Setting__mdt.object
<CustomObject>
    <description>Payment Method API Name and address information for specific Floor Plan providers.</description>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <description>Name of the Floor Plan company</description>
        <label>Company</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <description>The name of the person who mail should be addressed to.</description>
        <inlineHelpText>Full Name of person receiving mail</inlineHelpText>
        <label>Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Method_API_Name__c</fullName>
        <description>The name of the payment method in ACV-API when this floor plan is used</description>
        <label>Payment Method API Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Send_Title_to_Buyer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked the Title will be shipped to the buyer</description>
        <inlineHelpText>If checked the Title will be shipped to the buyer</inlineHelpText>
        <label>Send Title to Buyer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street1__c</fullName>
        <label>Street1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street2__c</fullName>
        <label>Street2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <label>Zip</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Floor Plan Setting</label>
    <pluralLabel>Floor Plan Settings</pluralLabel>
</CustomObject>